force-app/main/default/objects/Lead/fields/Assigned_Admission_Counsellor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Admission_Counsellor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Admission Counsellor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>