force-app/main/default/objects/Lead/fields/Assigned_PD__c.field-meta.xml
<CustomField>
    <fullName>Assigned_PD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The PD assigned to this lead via round-robin. Once set, all future PD calls route to this person.</description>
    <label>Assigned Program Director</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>PD Assigned Leads</relationshipLabel>
    <relationshipName>PD_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>