force-app/main/default/objects/Lead/fields/Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads5</relationshipName>
    <type>Lookup</type>
</CustomField>