force-app/main/default/objects/Lead/fields/Date_time_of_last_meeting_from_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Date_time_of_last_meeting_from_Meetings__c</fullName>
    <description>Date Time in text format</description>
    <label>Date time of last meeting from Meetings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>