force-app/main/default/objects/Lead/fields/Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Name__c</fullName>
    <label>Deal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>