force-app/main/default/objects/Lead/fields/Did_the_family_apply_for_financial_aid__c.field-meta.xml
<CustomField>
    <fullName>Did_the_family_apply_for_financial_aid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did the family apply for financial aid?</label>
    <type>Checkbox</type>
</CustomField>