force-app/main/default/objects/Lead/fields/Guest_Emails__c.field-meta.xml
<CustomField>
    <fullName>Guest_Emails__c</fullName>
    <description>BACKEND-ONLY. Comma-separated list of additional guest email addresses captured at booking time via the Add Guests UI on the public scheduler. Read by ZoomMeetingManager (via the SA&apos;s Lead__r relationship) so guests are CC&apos;d on the schedule / reschedule / cancel emails and listed as ICS ATTENDEE entries on the calendar invite. Populated by GuestSchedulerController.bookIC at lead-creation time.</description>
    <inlineHelpText>Backend-only. Populated automatically by the booking widget; do not edit manually.</inlineHelpText>
    <label>Guest Emails</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>