force-app/main/default/objects/Lead/fields/IC_admissions_counselor__c.field-meta.xml
<CustomField>
    <fullName>IC_admissions_counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IC admissions counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>