force-app/main/default/objects/Lead/fields/IC_No_Show_Count__c.field-meta.xml
<CustomField>
    <fullName>IC_No_Show_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tracks how many times a family has no-showed to their Initial Consultation. Per company policy, 3+ no-shows triggers a Slack alert for review.</description>
    <label>IC No-Show Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>