force-app/main/default/objects/Lead/fields/IC_Notes_for_the_Sheet__c.field-meta.xml
<CustomField>
    <fullName>IC_Notes_for_the_Sheet__c</fullName>
    <label>IC Notes for the Sheet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>