force-app/main/default/objects/Lead/fields/IC_Reschedule_Token__c.field-meta.xml
<CustomField>
    <fullName>IC_Reschedule_Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>BACKEND-ONLY. Single-use token populated on the Lead when its IC Service Appointment is canceled. Lets the prospect rebook a new SA against the same Lead via the public booking widget without going through the full lead-capture flow again. Cleared by GuestSchedulerController.bookAppointment after a successful rebook so the link cannot be reused.</description>
    <externalId>true</externalId>
    <label>IC Reschedule Token</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>