force-app/main/default/objects/Lead/fields/IC_Schedule_Link__c.field-meta.xml
<CustomField>
    <fullName>IC_Schedule_Link__c</fullName>
    <label>IC Schedule Link</label>
    <type>Url</type>
</CustomField>