force-app/main/default/objects/Lead/fields/ID_of_Last_Meeting_from_Meetings_Tool__c.field-meta.xml
<CustomField>
    <fullName>ID_of_Last_Meeting_from_Meetings_Tool__c</fullName>
    <description>Support field - The ID of the call that was booked</description>
    <label>ID of Last Meeting from Meetings Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>