force-app/main/default/objects/Lead/fields/International_non_US_resident_student__c.field-meta.xml
<CustomField>
    <fullName>International_non_US_resident_student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International/ non US resident student</label>
    <type>Checkbox</type>
</CustomField>