force-app/main/default/objects/Lead/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <formula>Id</formula>
    <label>LeadId</label>
    <type>Text</type>
</CustomField>