force-app/main/default/objects/Lead/fields/Most_recent_IC_call_date__c.field-meta.xml
<CustomField>
    <fullName>Most_recent_IC_call_date__c</fullName>
    <label>Most recent IC call date</label>
    <type>Date</type>
</CustomField>