force-app/main/default/objects/Lead/fields/Most_Recent_IC_Created__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_IC_Created__c</fullName>
    <description>Most recent IC created date, updated each time</description>
    <label>Most Recent &quot;IC&quot; Created</label>
    <type>Date</type>
</CustomField>