force-app/main/default/objects/Lead/fields/Most_Recent_IC_HS_Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_IC_HS_Meeting_ID__c</fullName>
    <description>Support field - The ID of the IC call that was booked</description>
    <label>Most Recent IC HS Meeting ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>