force-app/main/default/objects/Lead/fields/Most_Recent_Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Meeting_Type__c</fullName>
    <description>Support field - Identifies the type fo call</description>
    <label>Most Recent Meeting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>