force-app/main/default/objects/Lead/fields/New_HS_Meeting_Zap_trigger__c.field-meta.xml
<CustomField>
    <fullName>New_HS_Meeting_Zap_trigger__c</fullName>
    <description>Support field - Used to trigger other automations whenever there&apos;s an update on calls</description>
    <label>New HS Meeting (Zap trigger)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>