force-app/main/default/objects/Lead/fields/No_of_Student_Enrolling_Today__c.field-meta.xml
<CustomField>
    <fullName>No_of_Student_Enrolling_Today__c</fullName>
    <label># of Students Enrolling Today</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>