force-app/main/default/objects/Lead/fields/Original_IC_Created_date__c.field-meta.xml
<CustomField>
    <fullName>Original_IC_Created_date__c</fullName>
    <description>First ever IC created date, never updated again</description>
    <label>Original IC Created date</label>
    <type>Date</type>
</CustomField>