force-app/main/default/objects/Lead/fields/Parent_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_1_Email__c</fullName>
    <label>Parent 1 Email</label>
    <type>Email</type>
</CustomField>