force-app/main/default/objects/Lead/fields/Parent_1_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_1_ID__c</fullName>
    <label>Parent 1 ID</label>
    <description>Unique ID for the primary parent (Parent 1) on the Lead. Auto-generated by leadParentGuardianManager on first load with the format "P-XXXXXXXX" and never regenerated. Mapped to Contact.Parent_ID__c at lead convert.</description>
    <length>32</length>
    <type>Text</type>
</CustomField>