force-app/main/default/objects/Lead/fields/Parent_1_Name_First_Last__c.field-meta.xml
<CustomField>
    <fullName>Parent_1_Name_First_Last__c</fullName>
    <label>Parent 1 Name (First &amp; Last)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>