force-app/main/default/objects/Lead/fields/Parent_2_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_ID__c</fullName>
    <label>Parent 2 ID</label>
    <description>Unique ID for the second parent / guardian on the Lead. Auto-generated by leadParentGuardianManager on save with the format "P-XXXXXXXX". Mapped to Contact.Parent_ID__c at lead convert.</description>
    <length>32</length>
    <type>Text</type>
</CustomField>