force-app/main/default/objects/Lead/fields/Parent_2_Name_First_Last__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Name_First_Last__c</fullName>
    <label>Parent 2 Name (First &amp; Last)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>