force-app/main/default/objects/Lead/fields/Parent_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Phone__c</fullName>
    <label>Parent 2 Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>