force-app/main/default/objects/Lead/fields/Program_Director__c.field-meta.xml
<CustomField>
    <fullName>Program_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Director</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Program Director</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>