force-app/main/default/objects/Lead/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard - 1:1 College Preparation Program</fullName>
                <default>true</default>
                <label>Standard - 1:1 College Preparation Program</label>
            </value>
            <value>
                <fullName>Zenith Essentials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>