force-app/main/default/objects/Lead/fields/Scheduled_Meeting_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Meeting_DateTime__c</fullName>
    <label>Scheduled Meeting DateTime</label>
    <type>DateTime</type>
</CustomField>