force-app/main/default/objects/Lead/fields/Second_Adult_Type__c.field-meta.xml
<CustomField>
    <fullName>Second_Adult_Type__c</fullName>
    <description>Relationship of the second adult on the Lead. Primary parent is always the Lead itself; this distinguishes whether the second adult is a Parent or a Guardian.</description>
    <label>Second Adult Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>