force-app/main/default/objects/Lead/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <label>Service Appointment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>