force-app/main/default/objects/Lead/fields/Specific_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Specific_Program_Type__c</fullName>
    <label>Specific Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Super Guarantee</fullName>
            </value>
            <value>
                <fullName>Scholarship Guarantee</fullName>
            </value>
            <value>
                <fullName>Satisfaction Guarantee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>