force-app/main/default/objects/Lead/fields/Student_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_2_Email__c</fullName>
    <label>Student 2 Email</label>
    <type>Email</type>
</CustomField>