force-app/main/default/objects/Lead/fields/Student_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_2_Name__c</fullName>
    <label>Student 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>