force-app/main/default/objects/Lead/fields/Student_3_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_3_Email__c</fullName>
    <label>Student 3 Email</label>
    <type>Email</type>
</CustomField>