force-app/main/default/objects/Lead/fields/Student_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_3_Name__c</fullName>
    <label>Student 3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>