force-app/main/default/objects/Lead/fields/Student_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Email__c</fullName>
    <label>Student Email</label>
    <type>Email</type>
</CustomField>