force-app/main/default/objects/Lead/fields/Student_ID_1__c.field-meta.xml
<CustomField>
    <fullName>Student_ID_1__c</fullName>
    <description>Unique ID for Student 1 on the Lead. Auto-generated by leadStudentManager on save with the format &quot;S-XXXXXXXX&quot;. Mapped to Contact.Student_ID__c (for the Student-record-type Contact created at lead convert).</description>
    <label>Student 1 ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>