force-app/main/default/objects/Lead/fields/Student_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Student_ID_2__c</fullName>
    <description>Unique ID for Student 2 on the Lead. Auto-generated by leadStudentManager on save with the format &quot;S-XXXXXXXX&quot;. Mapped to Contact.Student_ID__c at lead convert.</description>
    <label>Student 2 ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>