force-app/main/default/objects/Lead/fields/Student_ID_3__c.field-meta.xml
<CustomField>
    <fullName>Student_ID_3__c</fullName>
    <label>Student 3 ID</label>
    <description>Unique ID for Student 3 on the Lead. Auto-generated by leadStudentManager on save with the format "S-XXXXXXXX". Mapped to Contact.Student_ID__c at lead convert.</description>
    <length>32</length>
    <type>Text</type>
</CustomField>