force-app/main/default/objects/Lead/fields/Substitute_Owner__c.field-meta.xml
<CustomField>
    <fullName>Substitute_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Substitute Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>